# areada_repository

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/backend/: main.py
app/backend/core/: settings.py
app/core/: settings.py
celery_worker/: Dockerfile  pyproject.toml  tasks.py
