[project]
name = "celery-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "llama-index>=0.14.5",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "redis>=7.0.0",
]
